--- a/fbsub-example/package.json
+++ b/fbsub-example/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.9.3",
     "fbsub": "0.0.7",
     "jade": "^1.8.2",
+    "jshint": "^2.5.11",
     "method-override": "^2.3.0",
     "mongoose": "^3.8.21",
     "morgan": "^1.5.0",
