--- a/fbsub-example/package.json
+++ b/fbsub-example/package.json
@@ -25,6 +25,8 @@
     "express": "^4.10.6",
     "express-session": "^1.9.3",
     "fbsub": "0.0.7",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
     "jade": "^1.8.2",
     "jshint": "^2.5.11",
     "method-override": "^2.3.0",
