--- a/youtube-video-download/package.json
+++ b/youtube-video-download/package.json
@@ -16,6 +16,11 @@
   "author": "Ikbhal Shaik",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^0.18.0",
+    "line-by-line": "^0.1.3",
+    "request": "^2.51.0",
+    "xmldom": "^0.1.19",
+    "xpath": "0.0.8",
     "ytdl-core": "^0.3.0"
   }
 }
