--- a/yourstoryReader/package.json
+++ b/yourstoryReader/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^0.18.0",
+    "output-file": "^1.1.0",
     "request": "^2.51.0"
   }
 }
